2008-01-20 Bruno STEUX <Bruno.Steux@ensmp.fr>
    * Added JPEG decompression support (camDecompressJPEG)
    * Changed version number to 2.8.0
    * Removed old files and functions (volberg, non-RLE labeling...)
    * Started deep modifications in Camellia RLE functions (modification of
    CamRun structure)
    * Modified circle drawing (more symmetric)
    * Added camCopyShift function

2008-01-07 Bruno STEUX <Bruno.Steux@ensmp.fr>
    * Released 2.7.0
    * Added camKeyPoints detection (SIFT/SURF like keypoints detection)

2007-06-19 Bruno STEUX <Bruno.Steux@ensmp.fr>

    * Changed version number to 2.6.2
    * Added camHistogramEqualisation function
    * Added ROI and mask support to YUV functions
    * Added RGB to HLS color conversion function
    * Added Harris corner detector
    * Fixed bug in linear filtering on signed images
    * Fixed bug in morphological filtering on signed images
    * Added local maximum detector function

2007-05-03 Bruno STEUX <Bruno.Steux@ensmp.fr>

    * Changed version number to 2.6.1
    * Corrected average computation in camMeasures (error when using masks)

2007-03-28 Bruno STEUX <Bruno.Steux@ensmp.fr>

    * New release : 2.6.0
    * Added support for autoconf/automake/libtools
    * Added safety test in RLE functions
    * Fixed a big bug with 16-bits image processing

2006-08-28 Bruno STEUX <Bruno.Steux@ensmp.fr>

    * Added BGR images support
    * Added DirectShow camera capture support
    * Added Video4Linux camera capture support (thread safe on Ruby)
    * RGBX images are now aligned on 4 bytes boundaries